(#2778 Corrected) Various spacing adjustments for mobile

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_alternating-lists.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_alternating-lists.scss
@@ -9,7 +9,9 @@
   padding: 20px 0.9375em 1.5em 0.9375em;
   color: $light-gray-text;
   line-height: 26px;
-
+  @include bp(small) {
+    padding: 0 20px 20px 20px;
+  }
   p {
     color: $light-gray-text;
     line-height: 26px;
